--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
         </div>
         
-        <div id="questions" class ="questions">
+        <div id="questions" class ="questions" hidden>
             <h2 id="question-title"></h2>
             <div id="choices" class="choices"></div>
         </div>
