--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <button id="start">START</button>
         <div id="results" class="results"></div>
-        
+        <div id="feedback" class="feedback hide"></div>
     </div>
 
     <h3 id="countdown" class="countdown"></h3>
